assets/tests.css
/* CSS Document */

.test {
	max-width: 100% !important;
	width: 100%;
}

.test > * {
	width: 100%;
	height: 5rem;
	vertical-align: middle;
	text-align: center;
	padding: 5rem 2rem;
	border-radius: 2.5rem;
}
.test.smaller > * {
	height: 2.5rem;
	border-radius: 1.25rem;
}
@media print {
	.test > * {
		height: 2rem;
		border-radius: 1rem;
	}
	.test.smaller > * {
		height: 1rem;
		border-radius: 0.5rem;
	}
}


.blue,
.red,
.green,
.purple,
.orange,
.teal {
	color: white;
}
.blue {
	background: #29b6f6;
}
.red {
	background: #f44336;
}
.green {
	background: #66bb6a;
}
.purple {
	background: #ce93d8;
}
.orange {
	background: #ffa726;
}
.teal {
	background: #13dda3;
}

.test-set-height {
	height: 10rem;
	border: 2px dashed;
	padding: 1rem;
}

